1.update views.py tag 2.modify css

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,17 +1,10 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en-US">
 <head>
-<title>Error - Page Not Found</title>
-
-<style type="text/css">
-body {background:#FFEEDD; margin: 0 auto;}
-div {margin: 0 auto; text-align:center}
-</style>
+	<meta charset="UTF-8">
+	<title></title>
 </head>
 <body>
-<div>
-<a href="{{ url_for('index') }}">
-<img src="/static/images/404.jpg" />
-</a>
-</div>
+	<iframe scrolling='no' frameborder='0' src='http://yibo.iyiyun.com/js/yibo404' width='735' height='700' style="display:block;margin:0 auto;"></iframe>
 </body>
-
+</html>
