--- a/templates/about.html
+++ b/templates/about.html
@@ -2,8 +2,8 @@
 <!--[if IE 7 ]>    <html class="ie7 oldie"> <![endif]-->
 <!--[if IE 8 ]>    <html class="ie8 oldie"> <![endif]-->
 <!--[if IE 9 ]>    <html class="ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html> <!--<![endif]-->
-
+<!--[if (gt IE 9)|!(IE)]><!--><!--<![endif]-->
+<html class=" js no-flexbox canvas canvastext postmessage no-websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache" lang="zh-CN">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta charset="utf-8"/>
@@ -21,18 +21,15 @@
 
 	<link type="text/css" rel="stylesheet" href="/static/css/SyntaxHighlighter/shCoreEclipse.css"><link>
 
-	<link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css"><link>
-	<link rel="stylesheet" type="text/css" media="screen" href="/static/css/coolblue.css" />
-	<link rel="stylesheet" type="text/css" media="screen" href="/static/css/chine.css" />
-	<script src="http://coolshell.cn//wp-content/themes/inove/js/base.js" type="text/javascript"> </script>
-
+	<link id="diginews_style-css" media="all" type="text/css" href="/static/css/style.css" rel="stylesheet">
+	<script src="/static/js/modernizr-2.6.1.min.js?ver=2.6.1" type="text/javascript"></script>
 	<script>window.jQuery || document.write('<script src="/static/js/jquery-1.7.2.min.js"><\/script>')</script>
+	<script src="/static/js/scripts.js?ver=1.0.0" type="text/javascript"></script>
+  
+	
 	<script src="/static/js/scrollToTop.js"></script>
 	<script src="/static/js/inputFocusOrBlur.js"></script>
 	<script src="/static/js/jquery.form.js"></script> 
-	<script src="/static/js/bootstrap-transition.js"></script> 
-	<script src="/static/js/bootstrap-tooltip.js"></script>
-	<script src="/static/js/bootstrap-modal.js"></script> 
 	<script src="/static/js/subscribe.js"></script> 
 
 	<!--[if lt IE 9]>
@@ -45,96 +42,158 @@
 	<script language="JavaScript" src="/static/js/loadSyntaxHighlighter.js"></script>
 	<script language="JavaScript" src="/static/js/keyboardControl.js"></script>
 
-
+   <style type="text/css">
+.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}
+</style>
+<style id="custom-background-css" type="text/css">
+body.custom-background { background-image: url('/static/images/bg.jpg'); background-repeat: repeat; background-position: top left; background-attachment: scroll; }
+</style>
 
 </head>
-<body>
-<div id="wrap">
+
+<body class="home blog custom-background single-author">
 <div id="container">
-<div id="header1">
-	
-	<div id="caption">
-<h1 id="title">
-	<a href="/">派森吧-pythonpub.com</a>
+	<header id="branding" role="banner">
+		<div id="inner-header" class="clearfix">
+			
+<hgroup id="site-heading">
+<h1 id="site-title">
+<a rel="home" title="派森吧-pythonpub.com" href="/">python pub</a>
 </h1>
-<div id="tagline">享受python编程所带来的快乐以及便利-www.pythonpub.com </div>
-</div>
-<div class="fixed"></div>
-</div>
+<h2 id="site-description">享受python带来的便利以及快乐 </h2>
+</hgroup>
 
 
-<div id="navigation">
+<nav id="access" role="navigation">
+<h1 class="assistive-text section-heading">Main menu</h1>
+<div class="skip-link screen-reader-text">
+<a title="Skip to content" href="#content">Skip to content</a>
+</div>
+
 {% include '/head.html' %}
-<div class="fixed"></div>
+</nav>
 </div>
+</header>
 
+<div id="content" class="clearfix">
+	<div id="main" class="col620 clearfix" role="main">
 
-
-	<!-- content-wrap -->
-	<div id="content1">
-
-			<!-- main -->
-	<div id="main1">
-
-
-
-<div class="post1">
-	<h2 style="margin-bottom: 15px;"><a href="/about">关于作者</a></h2> 
+		<article id="post-71" class="post-71 post type-post status-publish format-standard hentry category-9 tag-10 tag-11 tag-12 tag-13">
+			<h2 style="margin-bottom: 15px;"><a href="/about">关于作者</a></h2> 
 
     <p><!-- pagebreak --></p>
 
-      <h3>个人简介</h3>
-	<p>&nbsp;&nbsp;&nbsp;&nbsp;一个井底之蛙，正准备趴井边欣赏下井外美好世界的“小码农”，不是高手，更加不是牛人，只是在跟随着自己的兴趣和喜好去学习一些技术，喜欢分享一些东西。目前的博客是从wordpress迁移过来的，使用flask的编写，界面借用了很多大牛的代码</p>
+      <h4>* 个人简介</h4>
+      <br>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;一个井底之蛙，正准备趴井边欣赏下井外美好世界的“小码农”，不是高手，更加不是牛人，只是在跟随着自己的兴趣和喜好去学习一些技术，喜欢分享一些东西。目前的博客是从wordpress迁移过来的，使用flask的编写，界面借用了很多大牛的代码</p></br>
+	<br>
     <p>&nbsp;&nbsp;&nbsp;&nbsp;入行不久，一直从事测试工作，主要的工作围绕着自动化测试，写过几个小小的自动化测试框架，主要语言是python，无聊的时间修改过thrift编译器的源码，使得生成的python代码更加合理和易用</p>
+</br>
+<h4>* 网络信息</h4>
 
-<h3>网络信息</h3>
+<ul>
+	<br>
+<li>@ Email: sixu05202004@gmail.com</li>
+<li>@ 豆 瓣: http://www.douban.com/people/sixu05202004/</li>
+<li>@ 微 博: 年纪大了，欣赏不了微博的世界</li>
+<li>@ 博客源码: https://github.com/sixu05202004/flaskblog</li>
+</br>
+</ul>
 <p><img class="size-full wp-image-3994 alignleft" title="蛋蛋的照片" src="/static/images/info.jpg" alt="蛋蛋的照片" width="600" height="253"></p>
+
+<br>
+</br>
+<h4>* 喜欢的</h4>
 <ul>
-<li>Email: sixu05202004@gmail.com</li>
-<li>豆 瓣: http://www.douban.com/people/sixu05202004/</li>
-<li>微 博: 年纪大了，欣赏不了微博的世界</li>
+	<br>
+	<li><strong>>优美胜于丑陋, 明了胜于晦涩, 简洁胜于复杂, 复杂胜于凌乱</strong></li>
+	<li><big>>扁平胜于嵌套, 间隔胜于紧凑, 可读性很重要</big></li>
+    <li><em>>即便假借特例的实用性之名, 也不可违背这些规则</em></li>
+ 	<li><i>>不要包容所有错误,除非你确定需要这样做</i></li>
+ 	<li><big>>当存在多种可能, 不要尝试去猜测 </big></li>
+ 	<li><em>>而是尽量找一种, 最好是唯一一种明显的解决方案</em></li>
+ 	<li><i>>虽然这并不容易, 因为你不是 Python 之父</i></li>
+ 	<li><strong>>做也许好过不做, 但不假思索就动手还不如不做</strong></li>
+ 	<li><em>>如果你无法向人描述你的方案, 那肯定不是一个好方案；反之亦然</em></li>
+ 	<li><i>>命名空间是一种绝妙的理念, 我们应当多加利用</i></li>
+ </br>
 </ul>
 
-<h3>喜欢的</h3>
+<h4>* 嗤之以鼻的</h4>
 <ul>
-	<li>优美胜于丑陋, 明了胜于晦涩, 简洁胜于复杂, 复杂胜于凌乱</li>
-	<li>扁平胜于嵌套, 间隔胜于紧凑, 可读性很重要</li>
-    <li>即便假借特例的实用性之名, 也不可违背这些规则</li>
- 	<li>不要包容所有错误,除非你确定需要这样做</li>
- 	<li>当存在多种可能, 不要尝试去猜测 </li>
- 	<li>而是尽量找一种, 最好是唯一一种明显的解决方案</li>
- 	<li>虽然这并不容易, 因为你不是 Python 之父</li>
- 	<li>做也许好过不做, 但不假思索就动手还不如不做</li>
- 	<li>如果你无法向人描述你的方案, 那肯定不是一个好方案；反之亦然</li>
- 	<li>命名空间是一种绝妙的理念, 我们应当多加利用</li>
+	<br>
+	<li><strong><那些无所不作的，为了自己利益而牺牲用户利益的企业</strong></li>
+	<li><em><创新！创新！创新！但是自己都弄不清楚什么是创新的某某某们</em></li>
+    <li><big><乱出书，乱翻译，出烂书。。。</big></li>
+    <li><i><得过且过，混日子</i></li>
+</br>
 </ul>
 
-<h3>嗤之以鼻的</h3>
-<ul>
-	<li>那些无所不作的，为了自己利益而牺牲用户利益的企业</li>
-	<li>创新！创新！创新！但是自己都弄不清楚什么是创新的某某某们</li>
-    <li>乱出书，乱翻译，出烂书。。。</li>
-    <li>得过且过，混日子</li>
-
-</ul>
-</div>
-</div>
+		</article>
 
 
 
-<div id="sidebar">
-{% include '/sider.html' %}
+
+
+
+
+
+
+
+
+
+
+
+
 	</div>
 
-<div class="fixed"></div>
+<div id="sidebar" class="widget-area col300" role="complementary">
+<div id="sidebar-wrap" class="clearfix">
+	{% include '/sider.html' %}
+</div>
 </div>
 
+</div>
+  
 
-<!-- footer -->
-<footer>
+
+
+
+
+
+
+
+
+
+<footer id="colophon" role="contentinfo">
+<div id="site-generator">
 {% include '/foot.html' %}
-<!-- /footer -->
+</div>
 </footer>
+
 </div>
-</div>
+
+
+
+
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
