--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 <!--[if IE 7 ]>    <html class="ie7 oldie"> <![endif]-->
 <!--[if IE 8 ]>    <html class="ie8 oldie"> <![endif]-->
 <!--[if IE 9 ]>    <html class="ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html> <!--<![endif]-->
-
+<!--[if (gt IE 9)|!(IE)]><!--><!--<![endif]-->
+<html class=" js no-flexbox canvas canvastext postmessage no-websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache" lang="zh-CN">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta charset="utf-8"/>
@@ -21,18 +21,16 @@
 
 	<link type="text/css" rel="stylesheet" href="/static/css/SyntaxHighlighter/shCoreEclipse.css"><link>
 
-	<link type="text/css" rel="stylesheet" href="/static/css/bootstrap.min.css"><link>
-	<link rel="stylesheet" type="text/css" media="screen" href="/static/css/coolblue.css" />
-	<link rel="stylesheet" type="text/css" media="screen" href="/static/css/chine.css" />
-    <script src="http://coolshell.cn//wp-content/themes/inove/js/base.js" type="text/javascript"> </script>
+	<link id="diginews_style-css" media="all" type="text/css" href="/static/css/style.css" rel="stylesheet">
+	<script src="/static/js/modernizr-2.6.1.min.js?ver=2.6.1" type="text/javascript"></script>
 	<script>window.jQuery || document.write('<script src="/static/js/jquery-1.7.2.min.js"><\/script>')</script>
+	<script src="/static/js/scripts.js?ver=1.0.0" type="text/javascript"></script>
+  
+	
 	<script src="/static/js/scrollToTop.js"></script>
 	<script src="/static/js/inputFocusOrBlur.js"></script>
 	<script src="/static/js/jquery.form.js"></script> 
-	<script src="/static/js/bootstrap-transition.js"></script> 
-	<script src="/static/js/bootstrap-tooltip.js"></script>
-	<script src="/static/js/bootstrap-modal.js"></script> 
-	<script src="/static/js/subscribe.js"></script> 
+	
 
 	<!--[if lt IE 9]>
 	    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -44,87 +42,117 @@
 	<script language="JavaScript" src="/static/js/loadSyntaxHighlighter.js"></script>
 	<script language="JavaScript" src="/static/js/keyboardControl.js"></script>
 
-
+   <style type="text/css">
+.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}
+</style>
+<style id="custom-background-css" type="text/css">
+body.custom-background { background-image: url('/static/images/bg.jpg'); background-repeat: repeat; background-position: top left; background-attachment: scroll; }
+</style>
 
 </head>
 
-<body>
-<div id="wrap">
+<body class="home blog custom-background single-author">
 <div id="container">
-<div id="header1">
-	
-	<div id="caption">
-<h1 id="title">
-	<a href="/">派森吧-pythonpub.com</a>
+	<header id="branding" role="banner">
+		<div id="inner-header" class="clearfix">
+			
+<hgroup id="site-heading">
+<h1 id="site-title">
+<a rel="home" title="派森吧-pythonpub.com" href="/">python pub</a>
 </h1>
-<div id="tagline">享受python编程所带来的快乐以及便利-www.pythonpub.com </div>
-</div>
-<div class="fixed"></div>
+<h2 id="site-description">享受python带来的便利以及快乐 </h2>
+</hgroup>
+
+
+<nav id="access" role="navigation">
+<h1 class="assistive-text section-heading">Main menu</h1>
+<div class="skip-link screen-reader-text">
+<a title="Skip to content" href="#content">Skip to content</a>
 </div>
 
-<div id="navigation">
 {% include '/head.html' %}
-
-<div class="fixed"></div>
+</nav>
 </div>
+</header>
+
+<div id="content" class="clearfix">
+	<div id="main" class="col620 clearfix" role="main">
+		{% for a in articles %}
+		<article id="post-71" class="post-71 post type-post status-publish format-standard hentry category-9 tag-10 tag-11 tag-12 tag-13">
+			<header class="entry-header">
+
+				
+				<h1 class="entry-title">
+					<a rel="bookmark" title="Permalink to {{a.post_title}}" href="/article/{{a.id}}">{{a.post_title}}</a>
+				</h1>
+
+								<div class="entry-meta">
+					<span class="sep">Posted on </span>
+					<a rel="bookmark" title="title" href="/article/{{a.id}}">
+						<time class="entry-date" datetime="2013-01-01T00:00:00+00:00">{{ a.post_create_time|safe }}</time>
+					</a>
+					<span class="byline">
+					<span class="sep"> by </span>
+					<span class="author vcard">
+						<a class="url fn n" rel="author" title="View all posts by dan" href="/">dan</a>
+					</span>
+					</span>
+					<span class="sep" style="float:right"><p><a class="more" href="/article/{{a.id}}">阅读全文 &raquo;</a></p></span>
+					<span class="sep"  style="float:right"> <a title="{{a.post_title}}" href="/article/{{a.id}}#comments">{{a.comment_count}}条评论</a></span>
+					<span class="sep" style="float:right"> {{ a.view_num }}人阅读</span>
 
 
+				</div>
+			</header>
+			<div class="entry-content post_content">
+				{% if (a.post_content|length)>3000 %}
+    				{{ (a.post_content|safe|html2textile)[:3000] }} ...
+				{% else %}
+    				{{ (a.post_content|safe) }} 
+				{% endif %}
+				
+				<p><a class="more" href="/article/{{a.id}}" style="float:right">阅读全文 &raquo;</a></p>
+				
+			</div>
 
-
-
-	<!-- content-wrap -->
-	<div id="content1">
-
-			<!-- main -->
-	<div id="main1">
-
-	{% for a in articles %}
-	<div class="post1">
-		<h2><a class="title" rel="bookmark" href="/article/{{a.id}}">{{a.post_title}}</a>
-		</h2>
-
-	    <div class="info">
-	    	<span class="date">{{ a.post_create_time|safe }}</span>
-	    	<span class="author">dan</span>
-
-	    	<span class="comments"> <a title="{{a.post_title}}" href="/article/{{a.id}}#comments">{{a.comment_count}}条评论</a>
-	    	</span>
-	    	<span class="comments"> {{ a.view_num }}人阅读</span>
-	    	<div class="fixed"></div>
-
-
-
-	    </div>
-
-	    <div class="content">
-	    	{{ (a.post_content|safe|html2textile)[:1000] }} ...
-
-	        <p><a class="more" href="/article/{{a.id}}">阅读全文 &raquo;</a></p>
-
-	    </div>
-
-	    <div class="under">
-
-	    	<span class="categories">分类: </span>
-	    	<span>
-				<a rel="category tag" title="查看 {{a.categorys.category_name}} 中的全部文章" href="/category/{{a.categorys.id}}">{{a.categorys.category_name}}</a>
-			</span>
-
-			<span class="tags">标签: </span>
-
-			{% for tag in a.tags %}
-			<span><a rel="tag" href="/tag/{{tag.id}}">{{tag.name}}</a></span>
+				
+			<footer class="entry-meta">
+				<span class="cat-links">
+Posted in
+<a rel="tag" title="查看 {{a.categorys.category_name}} 中的全部文章" href="/category/{{a.categorys.id}}">{{a.categorys.category_name}}</a>
+</span>
+<span class="sep"> | </span>
+<span class="tag-links" style="float:right">
+Tagged:
+<span class="sep" style="float:right"> | </span>
+{% for tag in a.tags %}
+			<span><a rel="tag" href="/tag/{{tag.id}}" style="float:right">{{tag.name}}</a></span>
 		
 			{% endfor %}
 
-		
-	</div>
-
-</div>
-    {% endfor %}
+</span>
 
 
-<div id="Pagination" class="pagination">
+
+
+
+
+
+			</footer>
+		</article>
+
+
+
+
+
+
+
+
+
+
+
+	{% endfor %}
+	<div id="Pagination" class="pagination">
 	<a href="/page/1" >首页 &raquo;</a>
     {% for i in pagination %}
         {% if i==pageid %}
@@ -138,30 +166,36 @@
 </div>
 
 
-<!-- /main -->
+	</div>
+
+<div id="sidebar" class="widget-area col300" role="complementary">
+<div id="sidebar-wrap" class="clearfix">
+	{% include '/sider.html' %}
+</div>
 </div>
 
+</div>
+  
 
 
 
 
 
-<div id="sidebar">
-{% include '/sider.html' %}
-	</div>
-<div class="fixed"></div>
-
-	<!-- /content-out -->
-	</div>
 
 
-<!-- footer -->
-<footer>
+
+
+
+<footer id="colophon" role="contentinfo">
+<div id="site-generator">
 {% include '/foot.html' %}
-<!-- /footer -->
+</div>
 </footer>
+
 </div>
-</div>
+
+
+
 
 </body>
 
