--- a/templates/sider.html
+++ b/templates/sider.html
@@ -1,22 +1,67 @@
-<div id="northsidebar" class="sidebar">
+<aside id="recent-posts-2" class="widget widget_recent_entries">
+    <h2 class="widget-title">公益广告</h2>
+    <div class="content">
+<p align="center" style="background-color: #82D51A;padding: 5px;color: white;font-weight: bold;border: solid 1px black;text-shadow: 0px 0px 3px black;">
+访问
+<a style="color: #FFE249;" target="_blank" href="/404">派生吧404页面</a>
+支持公益！
+</p>
+</div>
 
-    <div id="recent-posts-2" class="widget widget_recent_entries">
-    <h3>最新文章</h3>
+</aside>
 
-    <ul>
+
+<aside id="recent-posts-3" class="widget widget_recent_entries">
+    <h2 class="widget-title">翻译文档列表</h2>
+<ul>
+<li>
+
+<a  target="_blank" href="http://www.pythondoc.com/pythontutorial27/index.html">Python 2.7 tutorial中文版</a>
+</li>
+
+<li>
+
+<a  target="_blank" href="http://www.pythondoc.com/pythontutorial3/index.html">Python 3.3 tutorial中文版</a>
+</li>
+</ul>
+</aside>
+
+<aside id="recent-posts-4" class="widget widget_recent_entries">
+    <h2 class="widget-title">谷歌广告</h2>
+    <script type="text/javascript"><!--
+google_ad_client = "ca-pub-3421553373953599";
+/* 派生吧1-1 */
+google_ad_slot = "1694752033";
+google_ad_width = 250;
+google_ad_height = 250;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+</aside>
+
+<aside id="recent-posts-3" class="widget widget_recent_entries">
+    <h2 class="widget-title">最新文章</h2>
+        <ul>
         {% for a in newpost %}
         <li>
         <a title="{{a.post_title}}" href="/article/{{a.id}}">{{a.post_title}}</a>
         </li>
         {% endfor %}
     </ul>
-    </div>
 
-    <div id="views-4" class="widget widget_views">
-    <h3>全站热门</h3>
-    
+</aside>
 
 
+
+
+
+
+
+<aside id="recent-posts-4" class="widget widget_recent_entries">
+    <h2 class="widget-title">全站热门</h2>
     <ul>
         {% for a in hotarticles %}
         <li>
@@ -25,10 +70,12 @@
         {% endfor %}
     </ul>
 
-    </div>
+</aside>
 
-<div id="tag_cloud-2" class="widget widget_tag_cloud">
-<h3>标签</h3>
+
+
+<aside id="tag_cloud-5" class="widget widget_tag_cloud">
+<h2 class="widget-title">标签</h2>
 <div class="tagcloud">
     {% set row_class = cycler('font-size:12.656565656pt;', 'font-size:8pt;', 'font-size:21.0567465745647pt;', 'font-size:9.0567465745647pt;','font-size:7.0567465745647pt;','font-size:14.0567465745647pt;', 'font-size:17.0567465745647pt;', 'font-size:10.0567465745647pt;','font-size:18.0567465745647pt;', 'font-size:9.0567465745647pt;', 'font-size:16.0567465745647pt;', 'font-size:19.0567465745647pt;', 'font-size:7.0567465745647pt;', 'font-size:10.0567465745647pt;','font-size:15.0567465745647pt;', 'font-size:8.0567465745647pt;', 'font-size:20.0567465745647pt;', 'font-size:17.0567465745647pt;', 'font-size:14.0567465745647pt;', 'font-size:15.0567465745647pt;') %}
     {% set color_class = cycler('color:#ac1dfe;','color:#bcb46e;','color:#4298e7;','color:#a7bce8','color:#e6eca8;','color:#d4349a;','color:#5b48ce;','color:#b5b1ea;',
@@ -40,57 +87,61 @@
     <a class="tag-link-17" style={{color_class.next()}}{{row_class.next()}} href="/tag/{{tag.id}}">{{tag.name}}</a>
     {% endfor %}
 </div>
-</div>
+</aside>
 
 
 
-</div>
 
-<div id="centersidebar" class="sidebar">
-
-
-        <div id="categories-367921423" class="widget widget_categories">
-     <h3>分类目录</h3>
-     <ul>
+<aside id="recent-posts-4" class="widget widget_recent_entries">
+    <h2 class="widget-title">分类目录</h2>
+         <ul>
         {% for c in categorys %}
-        <li class="cat-item cat-item-189">
-        <a title="查看 {{c.category_name}} 下的所有文章" href="/category/{{c.id}}">{{c.category_name}}</a>
-        ({{c.posts.count()}})
+        <li >
+        <a title="查看 {{c.category_name}} 下的所有文章" href="/category/{{c.id}}">{{c.category_name}}({{c.posts.count()}})</a>
         </li>
         {% endfor %}
-     </ul>   
-    </div>
-    </div>
+     </ul>  
 
-<div id="southsidebar" class="sidebar">
-    <div id="get-recent-comments" class="widget widget_get_recent_comments">
-    <h3>最新评论</h3>
-    <div id="get_recent_comments_wrap">
-        <ul>
+</aside>
+
+
+
+
+<aside id="recent-comments-3" class="widget widget_recent_comments">
+<h2 class="widget-title">近期评论</h2>
+<ul id="recentcomments">
             {% for comment in comments %}
             <li>
                 <a title="{{comment.post_id}}" href="/article/{{comment.post_id}}#comments">{{comment.author}}</a>
                 : {{(comment.content|safe)[:30]}} ...
             </li>
             {% endfor %}
-        </ul>
-    </div>
+</ul>
+</aside>
 
-    </div>
-    <div id="google">
-        <script type="text/javascript"><!--
-        google_ad_client = "ca-pub-3421553373953599";
-        /* 首页侧边下方 */
-        google_ad_slot = "4863599936";
-        google_ad_width = 200;
-        google_ad_height = 200;
+
+
+<aside id="recent-posts-4" class="widget widget_recent_entries">
+    <h2 class="widget-title">谷歌广告</h2>
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-3421553373953599";
+/* 派生吧1-2 */
+google_ad_slot = "3171485237";
+google_ad_width = 250;
+google_ad_height = 250;
 //-->
-        </script>
-        <script type="text/javascript"
-        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-        </script>
-    </div>
-    </div>
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>  
 
-	
+</aside>
 
+<aside id="text-4" class="widget widget_text">
+<h2 class="widget-title">站长统计</h2>
+<div class="textwidget">
+<script src="http://s23.cnzz.com/stat.php?id=3539674&web_id=3539674&show=pic2" language="JavaScript"></script>   
+</div>
+</aside>
+
+ 
