--- a/templates/tag.html
+++ b/templates/tag.html
@@ -129,11 +129,10 @@ Posted in
 <a rel="tag" title="查看 {{a.categorys.category_name}} 中的全部文章" href="/category/{{a.categorys.id}}">{{a.categorys.category_name}}</a>
 </span>
 <span class="sep"> | </span>
-<span class="tag-links" style="float:right">
+<span class="tag-links">
 Tagged:
-<span class="sep" style="float:right"> | </span>
 {% for tag in a.tags %}
-			<span><a rel="tag" href="/tag/{{tag.id}}" style="float:right">{{tag.name}}</a></span>
+			<span><a rel="tag" href="/tag/{{tag.id}}">{{tag.name}}</a></span>
 		
 			{% endfor %}
 
@@ -159,19 +158,18 @@ Tagged:
 
 
 	{% endfor %}
-	<div id="Pagination" class="pagination">
-	<a href="/page/1" >首页 &raquo;</a>
+<div id="Pagination" class="pagination">
+	<a href="/tag/{{id}}/page/1" >首页 &raquo;</a>
     {% for i in pagination %}
         {% if i==pageid %}
 	    <span class="current">{{pageid}}</span>
         {% else %}
-	    <a href="/page/{{i}}" >{{i}}</a>
+	    <a href="/tag/{{id}}/page/{{i}}" >{{i}}</a>
         {% endif %}
     {% endfor %}
 	<span>...</span>
-	<a href="/page/{{last_page}}" >末页 &raquo;</a>
+	<a href="/tag/{{id}}/page/{{last_page}}" >末页 &raquo;</a>
 </div>
-
 
 	</div>
 
