--- a/templates/head.html
+++ b/templates/head.html
@@ -11,6 +11,7 @@
             <li class="page_item page-item-2" {% if nav_current=="linux/unix cookbook" %}id="current"{% endif %}><a href="/category/4">操作系统</a></li>
             <li class="page_item page-item-2" {% if nav_current=="other" %}id="current"{% endif %}><a href="/category/5">杂项</a></li>
             <li class="page_item page-item-2" {% if nav_current=="about" %}id="current"{% endif %}><a href="/about">关于</a></li>
+            <li class="page_item page-item-2" {% if nav_current=="rss" %}id="current"{% endif %}><a href="/rss_lastnews">RSS</a></li>
         
         </ul>
 </div>
