添加验证码以防止垃圾评论

--- a/templates/post.html
+++ b/templates/post.html
@@ -234,6 +234,11 @@ One thought on “
             {{ form.content(rows=8, cols=30)}}
       </p>
 
+      <p class="comment-form-recaptcha">  
+            {{ form.recaptcha.label  }}
+            {{ form.recaptcha}}
+      </p>
+
       <p class="form-submit">
         {{ form.submit }}
       </p>
